k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rag-api-ingress
  namespace: rag-api
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "rag-api-ip"
    networking.gke.io/managed-certificates: "rag-api-ssl-cert"
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
  - host: rag-api.tienpdinh.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: rag-api-service
            port:
              number: 80
